--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.carousel-fade .carousel-item, .carousel-item img  {
+  max-height: 90vh;
+}
